got rid of weird visual issue where the focused choice was covering the subsequent letter in DnD

--- a/components/corespring/drag-and-drop/src/client/styles.css
+++ b/components/corespring/drag-and-drop/src/client/styles.css
@@ -40,6 +40,7 @@
 
 .drag-and-drop-config-panel .drag-and-drop-choices li {
 	float: left;
+    width: 145px;
 }
 
 .drag-and-drop-config-panel .drag-and-drop-answers {
